--- a/flots.html
+++ b/flots.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="css/style.css">
   </head>
 <body>
-
-
   <h1>HTML list</h1>
   <h2>Flots</h2>
   <img src="img/sunset" alt="paragraph xd">
@@ -21,7 +19,8 @@
   <p>Corruption is a form of Dishonesty Or A Criminal Offense which is undertaken by a person or an organization which is importante entrusted in a position of authority, in order to acquire illicit benefits or abuse power for one's personal gain. Corruption may involve many activities which include bribery, influence</p>
   </div>
 
-
+changes
+yeah
 
 </body>
 
