--- a/exercise-css-methods.html
+++ b/exercise-css-methods.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/styless.css">
 </head>
 <body>
-    <h1><div class="titulo">style me via the external method!</div></h1>
+    <div class="titulo">Style me via the external method!</div>
     <p>i would like to be styled with the internal method, please.</p>
     <button style="background-color: yellow; color: black;" > incline method</button>
+</body>
+</html>
