--- a/exercise-class.html
+++ b/exercise-class.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <p class="class1">Number 1- im a class!</p>
-    <div id="id1">NUmber 2 - imone ID.</div>
-    <p class="class2">Number 3 - im q clqss, but im cooler!</p>
-    <div id="id2"> Number 4 - im onother id.</div>
+    <div id="id1">NUmber 2 - im one ID.</div>
+    <p class="class2">Number 3 - im q class, but im cooler!</p>
+    <div id="id2"> Number 4 - im another id.</div>
     <p class="class3">Number 5 - im a class!</p>
 
 
