--- a/exercise-css-methods.html
+++ b/exercise-css-methods.html
@@ -8,7 +8,7 @@
         }
     </style>
     <meta charset="utf-8">
-    <title>My first excercise</title>
+    <title>My first exercise</title>
     <link rel="stylesheet" href="css/styless.css">
 </head>
 <body>
