--- a/layout.html
+++ b/layout.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>My First Website</title>
-  <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="utf-8" />
+    <title>My First Website</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-<body>
+  <body>
+    <div class="container">
+      <h1>A basic layout</h1>
+      <h2>Section</h2>
+      <p>
+        Encontré un ensayo sobre el sindicalismo en México que puede ser de tu
+        interés. El ensayo se enfoca en la historia del sindicalismo en México y
+        su impacto en la sociedad y el gobierno. El autor también discute cómo
+        el sindicalismo ha evolucionado y ha sido influenciado por los cambios
+        políticos y económicos en México. Puedes leer el ensayo completo en el
+      </p>
 
- <div class="container">
-  <h1>A basic layout</h1>
-  <h2>Section</h2>
-  <p>Encontré un ensayo sobre el sindicalismo en México que puede ser de tu interés. El ensayo se enfoca en la historia del sindicalismo en México y su impacto en la sociedad y el gobierno. El autor también discute cómo el sindicalismo ha evolucionado y ha sido influenciado por los cambios políticos y económicos en México. Puedes leer el ensayo completo en el</p>
+      <p>
+        Encontré un ensayo sobre el sindicalismo en México que puede ser de tu
+        interés. El ensayo se enfoca en la historia del sindicalismo en México y
+        su impacto en la sociedad y el gobierno. El autor también discute cómo
+        el sindicalismo ha evolucionado y ha sido influenciado por los cambios
+        políticos y económicos en México. Puedes leer el ensayo completo en el
+      </p>
 
-  <p>Encontré un ensayo sobre el sindicalismo en México que puede ser de tu interés. El ensayo se enfoca en la historia del sindicalismo en México y su impacto en la sociedad y el gobierno. El autor también discute cómo el sindicalismo ha evolucionado y ha sido influenciado por los cambios políticos y económicos en México. Puedes leer el ensayo completo en el</p>
-
-  <p>Encontré un ensayo sobre el sindicalismo en México que puede ser de tu interés. El ensayo se enfoca en la historia del sindicalismo en México y su impacto en la sociedad y el gobierno. El autor también discute cómo el sindicalismo ha evolucionado y ha sido influenciado por los cambios políticos y económicos en México. Puedes leer el ensayo completo en el</p>
-</div>
-</body>
-
-
+      <p>
+        Encontré un ensayo sobre el sindicalismo en México que puede ser de tu
+        interés. El ensayo se enfoca en la historia del sindicalismo en México y
+        su impacto en la sociedad y el gobierno. El autor también discute cómo
+        el sindicalismo ha evolucionado y ha sido influenciado por los cambios
+        políticos y económicos en México. Puedes leer el ensayo completo en el
+      </p>
+    </div>
+  </body>
 </html>
