--- a/flots.html
+++ b/flots.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Website</title>
-  <link rel="stylesheet" href="css/style.css">
-  </head>
-<body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>My First Website</title>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
+		<h1>HTML list</h1>
+		<h2>Flots</h2>
+		<img src="img/sunset" alt="paragraph xd" />
 
-  <h1>HTML list</h1>
-  <h2>Flots</h2>
-  <img src="img/sunset" alt="paragraph xd">
+		<div class="red-box">
+			<p>
+				Corruption is a form of Dishonesty Or A Criminal Offense which is
+				undertaken by a person or an organization which is importante entrusted
+				in a position of authority, in order to acquire illicit benefits or
+				abuse power for one's personal gain. Corruption may involve many
+				activities which include bribery, influence
+			</p>
+		</div>
 
-  <div class="red-box">
-  <p>Corruption is a form of Dishonesty Or A Criminal Offense which is undertaken by a person or an organization which is importante entrusted in a position of authority, in order to acquire illicit benefits or abuse power for one's personal gain. Corruption may involve many activities which include bribery, influence</p>
-  </div>
-
-  <div class="blue-box">
-  <p>Corruption is a form of Dishonesty Or A Criminal Offense which is undertaken by a person or an organization which is importante entrusted in a position of authority, in order to acquire illicit benefits or abuse power for one's personal gain. Corruption may involve many activities which include bribery, influence</p>
-  </div>
-</body>
-
-
+		<div class="blue-box">
+			<p>
+				Corruption is a form of Dishonesty Or A Criminal Offense which is
+				undertaken by a person or an organization which is importante entrusted
+				in a position of authority, in order to acquire illicit benefits or
+				abuse power for one's personal gain. Corruption may involve many
+				activities which include bribery, influence
+			</p>
+		</div>
+	</body>
 </html>
