--- a/flexbox-pr.html
+++ b/flexbox-pr.html
@@ -1,4 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-	<header><</header>
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>flexbox practice</title>
+		<link rel="stylesheet" href="css/styless.css" />
+	</head>
+	<header>
+		<div class="left">
+			<div class="logo">LOGO</div>
+			<div class="left-links">
+				<ul>
+					<li><a href="#">link one</a></li>
+					<li><a href="#">link two</a></li>
+					<li><a href="#">link three</a></li>
+				</ul>
+			</div>
+		</div>
+		<div class="notification">
+			<button class="new">1 new notification</button>
+			<div class="resize"></div>
+		</div>
+	</header>
 </html>
