--- a/06-flex-layout.html
+++ b/06-flex-layout.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale1.0" />
-		<title>Flex layout</title>
-		<link rel="stylesheet" href="css/styless.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>LAYOUT</title>
+		<link rel="stylesheet" href="./solution.css" />
 	</head>
 	<body>
 		<div class="header">
 			<ul class="left-links">
 				<li><a href="#">About</a></li>
-				<li><a href="#"> Store</a></li>
+				<li><a href="#">Store</a></li>
 			</ul>
 			<ul class="right-links">
 				<li><a href="#">Profile</a></li>
-				<li><a href="#">Setting</a></li>
+				<li><a href="#">Settings</a></li>
 			</ul>
 		</div>
 		<div class="content">
-			<div class="box">
-				<img src="img/logo.png" alt="logo" />
-			</div>
+			<img
+				src="./logo.png"
+				alt="Project logo. Represents odin with the project name." />
 			<div class="input">
 				<input type="text" />
 			</div>
